# QuickCast

./: CMakeLists.txt  QuickCast.rc  README.md  build.bat  conf.ini  global_hook.c  global_hook.cxx  hotkeys.cxx  main.cxx
.github/workflows/: cmake.yml
dll_inject_attempt/: dll_inject.cxx
misc/: classic_ui_conf.ini  conf.ini.example
misc/dll_inject_attempt/: CMakeLists.txt
src/: config.h  global_hook.c  hotkeys.c  hotkeys.h  input.h  main.c  memes.h  process.h  static.h  stdafx.h  tray.h  utils.h
